# genai-agentos

./: .env-example  .gitignore  README.md  docker-compose.yml
.github/workflows/: monorepo_cicd.yaml
agents/: app.py  requirements.txt
agents/tone_shifter_agent/: agent.py  config.yaml
backend/: README.md  main.py  pyproject.toml
backend/migrations/versions/: 046a06a0b0a4_initial_migrations.py  629b5d6c0adf_initial_migrations.py  9c4f1d317205_initial_migrations.py  a2d715381000_initial_migrations.py
backend/scripts/: set_cron_cleanup.sh
backend/src/core/: settings.py
backend/src/db/: annotations.py  session.py
cli/: README.md  install_cli.ps1  install_cli.sh
frontend/: .prettierrc.json  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  global.d.ts  index.css  router.tsx
genai_agents_example/get_weather_agent/: .env
genai_agents_example/translate_text_agent/: .env
master-agent/: README.md  main.py  pyproject.toml
master-agent/agents/: __init__.py  base.py  react_master_agent.py
master-agent/config/: settings.py
master-agent/connectors/: managers.py
master-agent/llms/: llms.py
master-agent/models/: exceptions.py  states.py
master-agent/utils/: agents.py  common.py  tracing.py
tests/: conftest.py  constants.py  pyproject.toml
tests/TestAPI/: test_agentflows_delete.py  test_agentflows_patch.py  test_agentflows_register_flow_post.py  test_agents_active_get.py  test_agents_agent_id_get.py  test_agents_agent_id_patch.py  test_agents_delete.py  test_agents_get.py  test_agents_register_post.py
(+138 files in other folders)
